# game-agent

./: .env  .env.example  .gitignore  README.md  debug_tool.py  list_audio_devices.py  list_voices.py  pyproject.toml  run.sh  test_agent.py
src/game_agent/: __init__.py  __main__.py  agent.py  stt.py  tools.py  tts.py
